--- a/daniel.html
+++ b/daniel.html
@@ -110,12 +110,11 @@
       <div class="footercontent">
        <div class="footertitle">Say hello to us</div>
        <div class="footertext">jobs@bitlab.mx</div>
+       <div class="footertext"><a href="#">Facebook</a></div>
+       <div class="footertext"><a href="#">LinkedIn</a></div>
       </div>
       <div class="footercontent">
-       <div class="footerrights">2015 - BITLAB - All rights reserved</div>
-      </div>
-      <div class="footercontent">
-       <div class="footertitle"><a href="#"><img src="img/facebook.png"/></a></div>
+       <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
       </div>
      </div>
     </div>
