--- a/proceso.html
+++ b/proceso.html
@@ -118,25 +118,29 @@
  <div class="ilust"><img src="img/celebrar.png"></div>
 </div>
 
-<div class="section contactfull">
- <div class="contactleft">
-  <h3>Contáctanos</3>
-   <h4>say hello!</h4>
-   <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-   <h3 style="font-size:14px;">info@bitlab.mx</h3>
-   <form action="#">
-    <div class="fullform">
-     Nombre: <input type="text"></br>
-     Empresa: <input type="text"></br>
-     E-Mail: <input type="text"></br>
-     Mensaje: <input type="text"></br>
-    </div>
-    <input type="submit" class="buttonfullform">
-   </form>
-  </div>
-  <div class="contactright">
+<div class="section" data-anchor="clients">
 
-  </div>
+ <div class="fullcontact">
+    <div class="container-fullcontact">
+    <div class="textform">
+    <h3 style="color:black">Contáctanos</3>
+    <h4 style="color:black">say hello!</h4>
+    <p style="margin-top:-35px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    <h3 style="color:black; margin-top:200px;font-size:14px;">info@bitlab.mx</h3>
+    </div>
+    </div>
+<div class="container-fullcontact">
+<form action="#">
+<div class="fullform">
+Nombre: <input type="text"></br>
+Empresa: <input type="text"></br>
+E-Mail: <input type="text"></br>
+Mensaje: <input style="height:100px" type="text">
+</div>
+</br><input type="submit" class="buttonform">
+</form>
+</div>
+   </div>
   <div class="footer">
    <div class="footercontent">
     <div class="footertitle">conócenos</div>
@@ -146,14 +150,14 @@
    <div class="footercontent">
     <div class="footertitle">Say hello to us</div>
     <div class="footertext">jobs@bitlab.mx</div>
+    <div class="footertext"><a href="#">Facebook</a></div>
+    <div class="footertext"><a href="#">LinkedIn</a></div>
    </div>
    <div class="footercontent">
-    <div class="footerrights">2015 - BITLAB - All rights reserved</div>
-   </div>
-   <div class="footercontent">
-    <div class="footertitle"><a href="#"><img src="img/facebook.png"/></a></div>
+    <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
    </div>
   </div>
+
  </div>
 
 </div>
