Final (falta servicios)

--- a/daniel.html
+++ b/daniel.html
@@ -9,97 +9,14 @@
  <script type="text/javascript" src="jquery.fullPage.js"></script>
  <link rel="stylesheet" type="text/css" href="css/main.css" />
  <script src="assets/javascript/fullPageInitializer.js"></script>
-  <script type="text/javascript" src="assets/javascript/servicios.js"></script>
+ <script type="text/javascript" src="assets/javascript/servicios.js"></script>
  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
  <link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
 </head>
 
-<<<<<<< HEAD
-	<body>
-		<div class="slidebar">
-			<div class="menu-container">
-				<p>Menú</p>
-				<ul>
-					<li><a href="#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-					<li><a href="#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
-					<li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
-					<li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-					<li><a href="#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
-					<li><a href="#" onclick="toggleMenu()"><span>Contacto</span></a></li>
-				</ul>
-			</div>
-		</div>
-		
-		<div>
-			<a href="#main"><img class="logo" src="img/bitlab.png"></a>
-			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
-		</div>
-<!--Main-->
-		<div id="fullpage">
-			<div class="section main" data-anchor="main">
-	 			<h1>Lleva tu negocio al siguiente nivel</h1>
-	 			<a href="#services">
-					<img class="arrow" src="img/flecha.png"/>
-	 			</a>
-			</div>
-<!--Servicios-->
-		 	<div class="section services" data-anchor="services">
-		 		<h2>Servicios</h2>
-		 	</div>
-<!--Proceso-->
-		 	<div class="section proceso" data-anchor="process">
-		 		<table>
-		 			<tr>
-		 				<td><img class="ilust" src="img/Proceso.png"/></td>
-			 			<td id="content">
-			 				<h3>Consultoría sin costo ni obligaciones.</h3>
-			 				<h4> CONOCE NUESTRO PROCESO DE TRABAJO</h4>
-			 				<p="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-			 				<a href="proceso.html"><div class="button">Saber más</div></a>
-			 			</td>
-		 			</tr>
-		 		</table>
-		 	</div>
-<!--Nosotros-->	
-		 	<div class="section nosotros" style="color:white" data-anchor="us">
- 				<h5 style="color:white">Conoce a nuestro equipo de trabajo</h5>
- 				<p class="conocenos">¿Quiénes somos?</p>
- 				<a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
-			</div>
-<!--Clientes-->
-		 	<div class="section clients" data-anchor="clients" style="height: 1900px;">
-		 		<div class="clients">
-			 		<p class="title-clients">Nuestros clientes</p>
-			 		<div class="client-container">
-				 		<img class="cliente1 general-client" src='img/cliente1g.png'/>
-				 		<img class="cliente2 general-client" src='img/cliente2g.png'/>
-				 		<img class="cliente3 general-client" src='img/cliente3g.png'/>
-				 		<img class="cliente4 general-client" src='img/cliente4g.png'/>
-			 		</div>
-		 		</div>
-		 		<div class="footer">
-			 		<div class="three">
-			 			<p class="footer-conocenos">Conócenos</p>
-				 		<p class="footer-adress"> Piedras Negras #229, 
-							Col. Mitras Centro C.P. 64650</p>
-						<p class="footer-tel">+52 (81) 21392290</p>
-						<p class="footer-hola">Dinos Hola!</p>
-						<p class="footer-web">jobs@bitlab.mx</p>
-			 		</div>
-			 		<div class="three">
-						<p class="footer-rights">2015 - BITLAB - All rights reserved</p>
-			 		</div>
-			 		<div class="three" style="height: 100%">
-						<a href="https://www.facebook.com/" class="footer-button" target="_blank"><img src="img/facebook.png"></a>
-			 		</div>
-			 		<div class="three"></div>
-		 		</div>
-		 	</div>
-		</div>
-	</body>
-</html>
-=======
+
 <body>
+
  <div class="slidebar">
   <div class="menu-container">
    <p>Menú</p>
@@ -118,7 +35,7 @@
  <div class="slidebarContact">
   <a class="closeContact" onclick="toggleContact()">Cerrar</a>
   <div class="contact-container">
-   <h3>Contáctanos</3>
+   <h3>Contáctanos</h3>
     <h4>say hello!</h4>
     <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
     <h3 style="font-size:14px;">info@bitlab.mx</h3>
@@ -138,91 +55,77 @@
 
 
   <div>
-   <a href="#main"><img class="logo" src="img/bitlab.png"></a>
+   <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
    <img class="menu" src="img/menu.png" onclick="toggleMenu()">
    <div class="contactBtn" onclick="toggleContact()">Contacto</div>
   </div>
 
 
-  <!--Main-->
-  <div id="fullpage">
-   <div class="section main" data-anchor="main">
-    <h1>Lleva tu negocio al siguiente nivel</h1>
-    <a href="#services">
-     <img class="arrow" src="img/flecha.png"/>
-    </a>
+
+
+ <!--Main-->
+ <div id="fullpage">
+  <div class="section main" data-anchor="main">
+   <h1>Lleva tu negocio al siguiente nivel</h1>
+   <a href="#services">
+    <img class="arrow" src="img/flecha.png"/>
+   </a>
+  </div>
+  <!--Servicios-->
+  <div class="section services" data-anchor="services">
+   <h2>Servicios</h2>
+  </div>
+  <!--Proceso-->
+  <div class="section proceso" data-anchor="process">
+   <div class="rowproceso">
+   <div class="container50"><img class="ilust" src="img/Proceso.png"/></div>
+<div class="container50">
+    <div class="text">
+     <h3>Consultoría sin costo ni obligaciones.</h3>
+     <h4> CONOCE NUESTRO<br>PROCESO DE TRABAJO</h4>
+     <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+    </div>
+    <a href="proceso.html"><div class="button" style="margin-top:50px;">Saber más</div></a>
+
    </div>
-   <!--Servicios-->
-   <div class="section services" data-anchor="services">
-    <h2>Servicios</h2>
-    <div id="listaDeServicios">
-     <span id="servicio">Objeto uno</span><br>
-     <span id="servicio">objeto dos</span><br>
-     <span id="servicio">objeto tres</span><br>
-     <span id="servicio">objeto cuatro</span><br>
-     <span id="servicio">Objeto cinco</span>
-    </div>
-
-    <div id="imgServicios">
-     <span id="mostrarImg">Uno</span>
-    </div>
-
-    <div id="contenidoServicios">
-     <span id="contenidoMostrado">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus eaque dolorem dolorum eveniet, nesciunt vitae unde debitis quis incidunt repellat facilis odit obcaecati autem nulla doloribus earum, veritatis? Pariatur, deserunt.</span>
+  </div>
+  </div>
+  <!--Nosotros-->
+  <div class="section nosotros" style="color:white" data-anchor="us">
+   <h5 style="color:white">Conoce a nuestro equipo de trabajo</h5>
+   <p class="conocenos">¿Quiénes somos?</p>
+   <a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
+  </div>
+  <!--Clientes-->
+  <div class="section clients" data-anchor="clients" style="height: 1900px;">
+   <div class="clients">
+    <p class="title-clients">Nuestros clientes</p>
+    <div class="client-container">
+     <img class="cliente1 general-client" src='img/cliente1g.png'/>
+     <img class="cliente2 general-client" src='img/cliente2g.png'/>
+     <img class="cliente3 general-client" src='img/cliente3g.png'/>
+     <img class="cliente4 general-client" src='img/cliente4g.png'/>
     </div>
    </div>
 
-
-
-   <!--Proceso-->
-   <div class="section proceso" data-anchor="process">
-    <table>
-     <tr>
-      <td><img class="ilustmain" src="img/Proceso.png"/></td>
-      <td id="content">
-       <h3>Consultoría sin costo ni obligaciones.</h3>
-       <h4>CONOCE NUESTRO PROCESO DE TRABAJO</h4>
-       <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-        <a href="proceso.html"><div class="button">Saber más</div></a>
-       </td>
-      </tr>
-     </table>
-    </div>
-    <!--Nosotros-->
-    <div class="section nosotros" style="color:white" data-anchor="us">
-     <h5 style="color:white">Conoce a nuestro equipo de trabajo</h5>
-     <h4 style="color:white; margin-top:60px">¿Quiénes somos?</h4>
-     <a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
-    </div>
-    <!--Clientes-->
-    <div class="section" data-anchor="clients">
-     <div class="clients">
-      <p class="title-clients">Nuestros clientes</p>
-      <div class="client-container">
-       <img class="cliente1 general-client" src='img/cliente1g.png'/>
-       <img class="cliente2 general-client" src='img/cliente2g.png'/>
-       <img class="cliente3 general-client" src='img/cliente3g.png'/>
-       <img class="cliente4 general-client" src='img/cliente4g.png'/>
-      </div>
-     </div>
-     <div class="footer">
-      <div class="footercontent">
-       <div class="footertitle">conócenos</div>
-       <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
-       </div>
-      </div>
-      <div class="footercontent">
-       <div class="footertitle">Say hello to us</div>
-       <div class="footertext">jobs@bitlab.mx</div>
-       <div class="footertext"><a href="#">Facebook</a></div>
-       <div class="footertext"><a href="#">LinkedIn</a></div>
-      </div>
-      <div class="footercontent">
-       <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
-      </div>
+   <div class="footer">
+    <div class="footercontent">
+     <div class="footertitle">conócenos</div>
+     <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
      </div>
     </div>
+    <div class="footercontent">
+     <div class="footertitle">Say hello to us</div>
+     <div class="footertext">jobs@bitlab.mx</div>
+     <div class="footertext"><a href="#">Facebook</a></div>
+     <div class="footertext"><a href="#">LinkedIn</a></div>
+    </div>
+    <div class="footercontent">
+     <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
+    </div>
    </div>
-  </body>
-  </html>
->>>>>>> origin/master
+
+   </div>
+  </div>
+ </body>
+ </html>
