--- a/proceso.html
+++ b/proceso.html
@@ -32,7 +32,7 @@
  <div class="slidebarContact">
   <a class="closeContact" onclick="toggleContact()">Cerrar</a>
   <div class="contact-container">
-   <h3>Contáctanos</3>
+   <h3>Contáctanos</h3>
     <h4>say hello!</h4>
     <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
     <h3 style="font-size:14px;">info@bitlab.mx</h3>
@@ -52,7 +52,7 @@
 
 
   <div>
-   <a href="daniel.html #main"><img class="logo" src="img/bitlab.png"></a>
+   <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
    <img class="menu" src="img/menu.png" onclick="toggleMenu()">
    <div class="contactBtn" onclick="toggleContact()">Contacto</div>
   </div>
@@ -68,7 +68,7 @@
    </div>
    <!--Proces-->
    <div class="section procesocontent" data-anchor="procesocontent">
-    <div class="center">
+    <div class="center" >
      <h3>Consultoría sin costo ni obligaciones.</h3>
      <h4>El camino al éxito</h4>
      <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
@@ -76,7 +76,8 @@
    </div>
    <!--Pasos-->
    <div class="section pasos">
-    <div class="ilust"><img src="img/descubrir.png"></div>
+   <div class="pasoscontent">
+<div class="ilust"><img src="img/descubrir.png"></div>
     <div class="contentpasos">
      <h1>01</h1>
      <h4>Descubrir</h4>
@@ -103,6 +104,7 @@
   <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
  </div>
  <div class="ilust"><img src="img/celebrar.png"></div>
+</div>
 </div>
 
 <div class="section" data-anchor="clients">
