--- a/daniel.html
+++ b/daniel.html
@@ -21,11 +21,11 @@
   <div class="menu-container">
    <p>Menú</p>
    <ul>
-    <li><a href="#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-    <li><a href="#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
+    <li><a href="daniel.html#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
+    <li><a href="daniel.html#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
     <li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
     <li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-    <li><a href="#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
+    <li><a href="daniel.html#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
    </ul>
   </div>
  </div>
