--- a/nosotros.html
+++ b/nosotros.html
@@ -19,11 +19,11 @@
   <div class="menu-container">
    <p>Menú</p>
    <ul>
-    <li><a href="#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-    <li><a href="#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
+    <li><a href="daniel.html#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
+    <li><a href="daniel.html#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
     <li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
     <li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-    <li><a href="#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
+    <li><a href="daniel.html#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
    </ul>
   </div>
  </div>
@@ -109,21 +109,17 @@
   <div class="section people">
 <div class="rowpeople">
 <h1>Nuestro<br>equipo</h1>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Daniel Ávila</h1><h3>CEO & Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Alberto Rodríguez</h1><h3>CEO & Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Leslie Valencia</h1><h3>Graphic Designer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
 <br>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Raúl Amador</h1><h3>Graphic Designer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Erick Bernal</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Jorge Chávez</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
 <br>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<br>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Lorem Ipsum</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Américo Guajardo</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><img src="img/person.png"/><br><h1>Franciso Lumbreras</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
+<div class="person"><div class="unete"><h1>únete a<br>nuestro<br>equipo</h1><br><div class="button">Escríbenos</div></div></div>
 </div>
 
 <div class="footer">
