--- a/daniel.html
+++ b/daniel.html
@@ -12,6 +12,7 @@
  <script type="text/javascript" src="assets/javascript/servicios.js"></script>
  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
  <link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
+ <script type="text/javascript" src="app.js"></script>
 </head>
 
 
@@ -36,29 +37,29 @@
   <a class="closeContact" onclick="toggleContact()">Cerrar</a>
   <div class="contact-container">
    <h3>Contáctanos</h3>
-    <h4>say hello!</h4>
-    <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h3 style="font-size:14px;">info@bitlab.mx</h3>
-    <form action="#">
-     <div class="minform">
-      Nombre: <input type="text"></br>
-      Empresa: <input type="text"></br>
-      E-Mail: <input type="text"></br>
-      Mensaje: <input type="text"></br>
-     </div>
-     <input type="submit" class="buttonform">
-    </form>
-   </div>
+   <h4>say hello!</h4>
+   <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+   <h3 style="font-size:14px;">info@bitlab.mx</h3>
+   <form action="#">
+    <div class="minform">
+     Nombre: <input type="text"></br>
+     Empresa: <input type="text"></br>
+     E-Mail: <input type="text"></br>
+     Mensaje: <input type="text"></br>
+    </div>
+    <input type="submit" class="buttonform">
+   </form>
   </div>
-  <!--Contacto-->
+ </div>
+ <!--Contacto-->
 
 
 
-  <div>
-   <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
-   <img class="menu" src="img/menu.png" onclick="toggleMenu()">
-   <div class="contactBtn" onclick="toggleContact()">Contacto</div>
-  </div>
+ <div>
+  <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
+  <img class="menu" src="img/menu.png" onclick="toggleMenu()">
+  <div class="contactBtn" onclick="toggleContact()">Contacto</div>
+ </div>
 
 
 
@@ -73,22 +74,38 @@
   </div>
   <!--Servicios-->
   <div class="section services" data-anchor="services">
-   <h2>Servicios</h2>
+   <div class="sectionscontainer">
+    <div class="listado">
+     <span id="servicio" onclick="show(0)">Desarrollo web</span><br>
+     <span id="servicio" onclick="show(1)">Diseño web</span><br>
+     <span id="servicio" onclick="show(2)">Diseño gráfico</span><br>
+     <span id="servicio" onclick="show(3)">Branding</span><br>
+     <span id="servicio" onclick="show(4)">Social Media</span><br>
+    </div>
+
+    <img class="showimage" src="img/s-desarrollo.png"/>
+
+    <div class="showcontent">
+     <div class="title">01</div>
+     <div class="subtitle">Desarrollo web</div>
+     <div class="content">Lorem ipsum dolor sit amet cconsectetur adipiscing elit nam malesuada dictum mauris sit amet porttitor nisl dignissim integer ac felis volutpat posuere orci</div>
+    </div>
+   </div>
   </div>
   <!--Proceso-->
   <div class="section proceso" data-anchor="process">
    <div class="rowproceso">
-   <div class="container50"><img class="ilust" src="img/Proceso.png"/></div>
-<div class="container50">
-    <div class="text">
-     <h3>Consultoría sin costo ni obligaciones.</h3>
-     <h4> CONOCE NUESTRO<br>PROCESO DE TRABAJO</h4>
-     <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-    </div>
-    <a href="proceso.html"><div class="button" style="margin-top:50px;">Saber más</div></a>
+    <div class="container50"><img class="ilust" src="img/Proceso.png"/></div>
+    <div class="container50">
+     <div class="text">
+      <h3>Consultoría sin costo ni obligaciones.</h3>
+      <h4> CONOCE NUESTRO<br>PROCESO DE TRABAJO</h4>
+      <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+     </div>
+     <a href="proceso.html"><div class="button" style="margin-top:50px;">Saber más</div></a>
 
+    </div>
    </div>
-  </div>
   </div>
   <!--Nosotros-->
   <div class="section nosotros" style="color:white" data-anchor="us">
@@ -125,7 +142,8 @@
     </div>
    </div>
 
-   </div>
   </div>
- </body>
- </html>
+ </div>
+ 
+</body>
+</html>
