--- a/daniel.html
+++ b/daniel.html
@@ -12,7 +12,6 @@
  <script type="text/javascript" src="assets/javascript/servicios.js"></script>
  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
  <link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
- <script type="text/javascript" src="app.js"></script>
 </head>
 
 
@@ -74,6 +73,7 @@
   </div>
   <!--Servicios-->
   <div class="section services" data-anchor="services">
+   <p class="title-servicios">Servicios</p>
    <div class="sectionscontainer">
     <div class="listado">
      <span id="servicio" onclick="show(0)">Desarrollo web</span><br>
@@ -144,6 +144,6 @@
 
   </div>
  </div>
- 
+ end
 </body>
 </html>
