--- a/daniel.html
+++ b/daniel.html
@@ -7,6 +7,9 @@
  <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  <script type="text/javascript" src="jquery.fullPage.js"></script>
+ <link rel="stylesheet" type="text/css" href="css/mobile.css" />
+ <link rel="stylesheet" type="text/css" href="css/stablet.css" />
+ <link rel="stylesheet" type="text/css" href="css/tablet.css" />
  <link rel="stylesheet" type="text/css" href="css/main.css" />
  <script src="assets/javascript/fullPageInitializer.js"></script>
  <script type="text/javascript" src="assets/javascript/servicios.js"></script>
