--- a/daniel.html
+++ b/daniel.html
@@ -105,7 +105,7 @@
       <h4> CONOCE NUESTRO<br>PROCESO DE TRABAJO</h4>
       <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
      </div>
-     <a href="proceso.html"><div class="button" style="margin-top:50px;">Saber más</div></a>
+     <a href="proceso.html"><div class="button" style="margin-top:15px;">Saber más</div></a>
 
     </div>
    </div>
@@ -117,7 +117,7 @@
    <a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
   </div>
   <!--Clientes-->
-  <div class="section clients" data-anchor="clients" style="height: 1900px;">
+  <div class="section clients" data-anchor="clients">
    <div class="clients">
     <p class="title-clients">Nuestros clientes</p>
     <div class="client-container">
@@ -141,7 +141,7 @@
      <div class="footertext"><a href="#">LinkedIn</a></div>
     </div>
     <div class="footercontent">
-     <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
+     <div class="footerrights">2015 - BITLAB - All rights reserved</div>
     </div>
    </div>
 
