--- a/proceso.html
+++ b/proceso.html
@@ -6,6 +6,9 @@
  <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  <script type="text/javascript" src="jquery.fullPage.js"></script>
+ <link rel="stylesheet" type="text/css" href="css/mobile.css" />
+ <link rel="stylesheet" type="text/css" href="css/stablet.css" />
+ <link rel="stylesheet" type="text/css" href="css/tablet.css" />
  <link rel="stylesheet" type="text/css" href="css/main.css" />
  <script src="assets/javascript/fullPageInitializer.js"></script>
  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
